#진혜영 로고바꾸기

--- a/branches/teamA_project_DEV_1.0/src/main/webapp/resources/front/css/style.css
+++ b/branches/teamA_project_DEV_1.0/src/main/webapp/resources/front/css/style.css
@@ -1391,7 +1391,7 @@ p.footer-main span {
 .copy-right {
     text-align: center;
     padding: 15px 0;
-    background: #FF5722;
+    background: #F5DA81;
 }
 .copy-right p {
     color: #fff;
