--- a/branches/teamA_project_DEV_1.0/src/main/webapp/WEB-INF/views/test_2.html
+++ b/branches/teamA_project_DEV_1.0/src/main/webapp/WEB-INF/views/test_2.html
@@ -9,12 +9,17 @@
 <p>테스트222222</p>
 
 
+<p>정진우 추가333333 </p>
 
 
 
 
 <p>정진우 추가 </p>
 <p>컴컴컴커밋</p>
+
+
+<p>정진우 추가22222 </p>
+
 
 <p>와이리 어렵노~</p>
 </body>
