--- a/trunk/teamA_project/src/main/webapp/resources/front/css/style.css
+++ b/trunk/teamA_project/src/main/webapp/resources/front/css/style.css
@@ -832,13 +832,13 @@ button.w3view-cart {
 /*-- Slider range --*/
 ul.dropdown-menu6 ,ul.dropdown-menu5{
 margin:0;
-position:relative;
+position:relative; 
 }
 ul.dropdown-menu6 li {
-list-style:none;
+list-style:none; 
 }
 ul.dropdown-menu6 li p{
-width:100%;
+width:100%; 
 }
 span.amount{
 color:#ffffff;
@@ -930,6 +930,13 @@ h3.heading-tittle {
     text-align: center;
     color: #000;
     font-size: 35px;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+h4.heading-tittle {
+    text-align: center;
+    color: #000;
+    font-size: 25px;
     font-weight: 600;
     letter-spacing: 1px;
 }
