--- a/branches/teamA_project_DEV_1.0/src/main/webapp/resources/front/css/style.css
+++ b/branches/teamA_project_DEV_1.0/src/main/webapp/resources/front/css/style.css
@@ -3090,6 +3090,16 @@ input[type="radio"], input[type="checkbox"] {
         float: left;
         width: 33%;
     }
+    .product-men3 {
+        margin-top: 2em;
+        float: left;
+        width: 33%;
+    }
+    .product-men4 {
+        margin-top: 2em;
+        float: left;
+        width: 33%;
+    }
     .agileinfo-ads-display{
         margin-top: 35px;
     }
@@ -3417,7 +3427,10 @@ input[type="radio"], input[type="checkbox"] {
     
     .product-sec3 {
         padding: 10px 5px;
-        margin: 8px;
+    }
+    
+    .product-sec4 {
+        padding: 10px 5px;
     }
     .agile-leftmk {
         width: 100%;
@@ -3774,6 +3787,10 @@ input[type="radio"], input[type="checkbox"] {
     .product-sec3 {
         padding: 10px 3px;
         margin: 8px;
+    }
+    
+    .product-sec4 {
+        padding: 30px 3px;
     }
     .offer-footer {
         padding: 0;
@@ -4653,7 +4670,9 @@ input[type="radio"], input[type="checkbox"] {
         padding: 5px 3px;
         margin: 8px;
     }
-    
+    .product-sec4 {
+        padding: 15px 3px;
+    }
     h3.heading-tittle {
         font-size: 23px;
     }
