--- a/branches/teamA_project_DEV_1.0/src/main/webapp/resources/front/css/bootstrap.css
+++ b/branches/teamA_project_DEV_1.0/src/main/webapp/resources/front/css/bootstrap.css
@@ -3517,6 +3517,78 @@ tbody.collapse.in {
 .dropdown-toggle:focus {
   outline: 0;
 }
+.dropdown-menu2 {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  display: none;
+  float: left;
+  min-width: 600px;
+  padding: 5px 0;
+  margin: 2px 0 0;
+  font-size: 14px;
+  text-align: left;
+  list-style: none;
+  background-color: #fff;
+  -webkit-background-clip: padding-box;
+          background-clip: padding-box;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, .15);
+  border-radius: 4px;
+  width: 33.33%;
+  -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+          box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+}
+.dropdown-menu2.pull-right {
+  right: 0;
+  left: auto;
+}
+.dropdown-menu2 .divider {
+  height: 1px;
+  margin: 9px 0;
+  overflow: hidden;
+  background-color: #e5e5e5;
+}
+.dropdown-menu2 > li > a {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 1.42857143;
+  color: #333;
+  white-space: nowrap;
+}
+.dropdown-menu2 > li > a:hover,
+.dropdown-menu2 > li > a:focus {
+  color: #262626;
+  text-decoration: none;
+  background-color: #f5f5f5;
+}
+.dropdown-menu2 > .active > a,
+.dropdown-menu2 > .active > a:hover,
+.dropdown-menu2 > .active > a:focus {
+  color: #fff;
+  text-decoration: none;
+  background-color: #337ab7;
+  outline: 0;
+}
+.dropdown-menu2 > .disabled > a,
+.dropdown-menu2 > .disabled > a:hover,
+.dropdown-menu2 > .disabled > a:focus {
+  color: #777;
+}
+.dropdown-menu2 > .disabled > a:hover,
+.dropdown-menu2 > .disabled > a:focus {
+  text-decoration: none;
+  cursor: not-allowed;
+  background-color: transparent;
+  background-image: none;
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+}
+.open > .dropdown-menu2 {
+  display: block;
+}
 .dropdown-menu {
   position: absolute;
   top: 100%;
