#진혜영 전체검색기능, 해외/국내 검색기능, 메뉴바 아이콘 변경, 가격(,표시),

--- a/branches/teamA_project_DEV_1.0/src/main/webapp/resources/front/css/style.css
+++ b/branches/teamA_project_DEV_1.0/src/main/webapp/resources/front/css/style.css
@@ -280,6 +280,7 @@ h3.agileinfo_sign span {
 }
 .navbar-nav > li > a {
     line-height: inherit;
+    color : black;
 }
 a.nav-stylehead {
     letter-spacing: 1px;
