--- a/branches/teamA_project_DEV_1.0/.settings/org.eclipse.wst.common.component
+++ b/branches/teamA_project_DEV_1.0/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     	
-    <wb-module deploy-name="teamA_project">
+    <wb-module deploy-name="teamA_project_DEV_1.0">
                 
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
                 
