--- a/branches/teamA_project_DEV_1.0/src/main/webapp/resources/front/css/style.css
+++ b/branches/teamA_project_DEV_1.0/src/main/webapp/resources/front/css/style.css
@@ -162,6 +162,59 @@ label{
     border:0;
     outline:0;
 }
+.main_wholemenu_content{
+	z-index: 100;
+	position: absolute;
+	top: 257px;
+	left: 70px;
+	width: 1064px;
+	border-bottom: 1px solid #d1d1d1;
+	border-left: 0 none;
+	border-right: 0 none;
+	background-color: #FFF;
+	text-align: left
+}
+.main_wholemenu_content table th.tour {
+    height: 40px;
+    padding-left: 22px;
+    font-size: 16px;
+    background-color: #008000;
+    color: #FFF;
+    text-align: left;
+    vertical-align: middle;
+}
+.main_wholemenu_content table th.tour_info_tit {
+    height: 40px;
+    padding-left: 22px;
+    font-size: 16px;
+    background-color: #ff0000;
+    color: #FFF;
+    text-align: left;
+    vertical-align: middle;
+}
+.tour_menu {
+	padding:0px 15px 15px 15px;
+}
+.tour_menu li {
+	padding: 10px 5px 0px 5px;
+    list-style-type: none;
+    line-height: 100%;
+    color: #000;
+}
+.tour_menu li a {
+	color: #000;
+}
+.main_wholemenu_content table td {
+    padding-top: 0;
+    border-bottom: 0 none;
+    vertical-align: top;
+}
+.menu_background {
+	background-image: url(../images/santa.png);
+	background-repeat: no-repeat;
+	background-size: 100px 100px;
+	background-position: right bottom;
+}
 #agileinfo-nav_search {
     outline: none;
     border: none;
